fix z-index for redactor css elements

--- a/static/less/redactor.less
+++ b/static/less/redactor.less
@@ -93,18 +93,18 @@
 	z-index: auto;
 }
 .redactor-box-fullscreen {
-	z-index: 1051;
+	z-index: 10051;
 }
 .redactor-toolbar {
 	z-index: 100;
 }
 .redactor-dropdown {
-	z-index: 1052;
+	z-index: 10052;
 }
 #redactor-modal-overlay,
 #redactor-modal-box,
 #redactor-modal {
-	z-index: 1053;
+	z-index: 10053;
 }
 
 /*
@@ -389,7 +389,7 @@ body .redactor-box-fullscreen {
 */
 .redactor-toolbar-tooltip {
 	position: absolute;
-	z-index: 1054;
+	z-index: 10054;
 	text-align: center;
 	top: 0;
 	left: 0;
